@@ -151,6 +151,7 @@ check: all $(GETTEXT_PACKAGE).pot
 mostlyclean:
 	rm -f *.pox $(GETTEXT_PACKAGE).pot *.old.po cat-id-tbl.tmp
 	rm -f .intltool-merge-cache
+	rm -f .intltool-merge-cachemake
 
 clean: mostlyclean
 
